# pc-cinco-flow

./: .gitignore
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 37de355484a0_initial_schema.py  38dc26e8c758_add_custom_fee_to_projects.py  6b4f5f024e7a_add_on_delete_cascade_to_foreign_keys.py  a9c1e6b7d442_add_products_and_link_services.py  bf809c3d679e_init_mysql_clean.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  deps.py  middleware.py
backend/app/models/: __init__.py  client.py  product.py  project.py  project_expense.py  service.py
backend/app/routers/: clients.py  products.py  project_expenses.py  projects.py  services.py  test.py
backend/app/schemas/: client.py  product.py  project.py  project_expense.py  service.py
backend/scripts/: seed_data.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AuthShell.jsx  ClientSelectField.jsx  CrudFormModal.jsx  CrudState.jsx  CrudTable.jsx  DashboardKpis.jsx  Field.jsx  FormActions.jsx  InvoicedBadge.jsx  Modal.jsx  PageHeader.jsx  PendingByClient.jsx  ProductSelectField.jsx  RowActions.jsx  TopClientes.jsx
frontend/src/hooks/: useDashboardAnalytics.js
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: Clients.jsx  Dashboard.jsx  Login.jsx  Products.jsx  ProjectDetail.jsx  Projects.jsx  Register.jsx  Services.jsx
frontend/src/routes/: AppRouter.jsx
frontend/src/services/: api.js  client.js  product.js  project.js  (+2 more)
